feat: add auth endpoints
